Change page style and add buttons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 </head>
 <body>
     <h1>ETCH-A-SKETCH</h1>
+    <div class="controllers">
+        <button id="size-control">Grid size</button>
+        <div class="colors-control">
+            <button class="black">Black</button>
+            <button class="white">White</button>
+        </div>
+        <button class="erase">Erase</button>
+    </div>
     <div class="grid-container">
 
     </div>
