--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="colors-control">
             <button class="black">Black</button>
             <button class="white">White</button>
-            <button class="rondom-color">Random color</button>
+            <button class="random-color">Random color</button>
             <button class="grey-scale">Grey Scale</button>
         </div>
         <button class="erase">Erase</button>
