--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <button class="erase">Erase</button>
     </div>
     <div class="grid-container">
-
     </div>
+    <footer>
+        <div>Copyright&copy; Karim The Odin Project 2022</div>
+    </footer>
 </body>
 </html>
